--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@fontsource/museomoderno": "^5.1.1",
     "@material-tailwind/react": "^2.1.10",
     "@szhsin/react-accordion": "^1.4.0",
@@ -19,7 +20,6 @@
     "bootstrap": "^5.3.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "emailjs-com": "^3.2.0",
     "framer-motion": "^12.4.7",
     "fs": "^0.0.1-security",
     "lucide-react": "^0.475.0",
