--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.4.7",
     "fs": "^0.0.1-security",
+    "i18next": "^25.4.2",
+    "i18next-browser-languagedetector": "^8.2.0",
     "lucide-react": "^0.475.0",
     "react": "^19.0.0",
     "react-bootstrap": "^2.10.7",
     "react-cookie-consent": "^9.0.0",
     "react-dom": "^19.0.0",
     "react-helmet": "^6.1.0",
+    "react-i18next": "^15.7.3",
     "react-icons": "^5.4.0",
     "react-router-dom": "^7.3.0",
     "recharts": "^2.15.1",
